# spotlight-launcher

./: .gitignore  README.md  commands.json  installer.bat  launcher.py  main.py  pyproject.toml  requirements.txt  style.py
